# luke-heinrich-ttb-label-verification

./: .gitignore  AGENTS.md  README.md  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: comparison.py  main.py  models.py  vision.py
backend/scripts/: extract_label.py  live_smoke.py  measure_latency.py  sample_label.py
backend/tests/: test_comparison.py  test_health.py  test_verify_endpoint.py  test_vision.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/components/: Batch.jsx  BatchResults.jsx  Single.jsx  fields.jsx  shared.jsx
frontend/src/hooks/: useBatchItems.js
frontend/src/test/: batch.smoke.test.jsx  helpers.js  setup.js  single.smoke.test.jsx
frontend/src/utils/: scroll.js
