[project]
name = "ttb-label-verification-backend"
version = "0.1.0"
description = "FastAPI backend for the TTB Label Verification proof-of-concept."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "openai>=2.0.0,<3.0.0",
    "pillow>=12.2.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "python-multipart>=0.0.32",
    "rapidfuzz>=3.14.5",
    "uvicorn[standard]>=0.30.0,<0.31.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
